--- a/index.html
+++ b/index.html
@@ -13077,7 +13077,182 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="ECE-4760">ECE 4760<a class="anchor-link" href="#ECE-4760">&#182;</a></h1><h4 id="This-is-a-placeholder-webpage">This is a placeholder webpage<a class="anchor-link" href="#This-is-a-placeholder-webpage">&#182;</a></h4>
+<h1 id="ECE-4760,-Cornell-University">ECE 4760, Cornell University<a class="anchor-link" href="#ECE-4760,-Cornell-University">&#182;</a></h1><h3 id="Digital-Systems-Design-Using-Microcontrollers">Digital Systems Design Using Microcontrollers<a class="anchor-link" href="#Digital-Systems-Design-Using-Microcontrollers">&#182;</a></h3><p>Design of real-time digital systems using microprocessor-based embedded controllers. Students working in pairs design, debug, and construct several small systems that illustrate and employ the techniques of digital system design acquired in previous courses. The content focuses on laboratory work. The lectures are used primarily for the introduction of examples, description of specific modules to be designed, and instruction in the hardware and high-level design tools to be employed.</p>
+<p>The course is taught by <a href="https://www.engineering.cornell.edu/faculty-directory/hunter-adams">Hunter Adams</a>, who is a staff member in Electrical and Computer Engineering. The course is currently taught using the <a href="https://www.raspberrypi.com/products/rp2040/">RP2040 microcontroller</a> on the <a href="https://www.raspberrypi.com/products/raspberry-pi-pico/">Raspberry Pi Pico</a> development board.</p>
+<p>Please note that this is the <em>new</em> course webpage. If you are looking for the previous one, please click <a href="https://people.ece.cornell.edu/land/courses/ece4760/">here</a>.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<hr>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Assignments">Assignments<a class="anchor-link" href="#Assignments">&#182;</a></h2><p><strong>Lab exercises, homework, and reading</strong></p>
+<ul>
+<li><a href="https://vanhunteradams.com/Pico/Cricket/Crickets.html"><strong>Lab 1</strong>: Synthesizing and synchronizing snowy tree crickets</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Animal_Movement/Animal_Movement.html"><strong>Lab 2</strong>: Animating leadership and decision-making in animal groups on the move</a></li>
+<li><strong>Lab 3</strong>: PID control of an inverted pendulum with a reaction wheel</li>
+</ul>
+<p><strong>Final project</strong></p>
+<ul>
+<li><strong>Final project assignment</strong></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/">Final projects from previous semesters</a></li>
+</ul>
+<p><strong>Metainformation and due dates</strong></p>
+<ul>
+<li><strong>Schedule of due dates</strong></li>
+<li><strong>What makes a good laboratory exercise?</strong></li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<hr>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Course-information">Course information<a class="anchor-link" href="#Course-information">&#182;</a></h2><p><strong>Teaching staff</strong></p>
+<ul>
+<li><strong>Instructor</strong>: Hunter Adams (<a href="https://www.engineering.cornell.edu/faculty-directory/hunter-adams">Cornell page</a>, <a href="https://vanhunteradams.com">personal website</a>)</li>
+<li>Retired instructor: Bruce Land (<a href="https://people.ece.cornell.edu/land/">website</a>)</li>
+<li>Teaching Assistants<blockquote><ul>
+<li>TBA</li>
+<li>TBA</li>
+<li>$\vdots$</li>
+</ul>
+</blockquote>
+</li>
+</ul>
+<p><strong>Lecture and lab schedule</strong></p>
+<ul>
+<li>Lectures: MWF</li>
+<li>Laboratory sections</li>
+</ul>
+<p><strong>Course policy and grading</strong></p>
+<ul>
+<li>Policy page: This is the <strong>implicit contract</strong> to which you are agreeing by taking this course. <em>Please read it.</em></li>
+</ul>
+<p><strong>Previous course webpage (PIC32)</strong></p>
+<ul>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/">Link here</a>: Contains information that you may find useful and interesting!</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<hr>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<hr>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Links">Links<a class="anchor-link" href="#Links">&#182;</a></h2><h4 id="Daily-use-links">Daily-use links<a class="anchor-link" href="#Daily-use-links">&#182;</a></h4><ul>
+<li><a href="https://github.com/vha3/Hunter-Adams-RP2040-Demos">Course demo code</a></li>
+<li><a href="https://datasheets.raspberrypi.com/rp2040/rp2040-datasheet.pdf">RP2040 datasheet</a></li>
+<li><a href="https://datasheets.raspberrypi.com/pico/raspberry-pi-pico-c-sdk.pdf">RP2040 C SDK Guide</a></li>
+</ul>
+<h4 id="Course-infrastructure">Course infrastructure<a class="anchor-link" href="#Course-infrastructure">&#182;</a></h4><ul>
+<li><a href="https://vanhunteradams.com/Pico/Setup/PicoSetup.html">Setting up C/C++ build environment for RP2040 on Windows</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Setup/PicoSetupMac.html">Setting up C/C++ build environment for RP2040 on Mac</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Setup/SDKArchitecture.html">Understanding RP2040 C SDK architecture</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Setup/UsingPicoSDK.html">Using RP2040 C SDK (dissecting a simple example)</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_protothreads/index_Protothreads.html">Protothreads on RP2040 (from Bruce)</a></li>
+<li><strong>Building demo code in the computer lab</strong></li>
+</ul>
+<h4 id="Algorithms-and-techniques">Algorithms and techniques<a class="anchor-link" href="#Algorithms-and-techniques">&#182;</a></h4><ul>
+<li><a href="https://vanhunteradams.com/DDS/DDS.html">Direct Digital Synthesis</a></li>
+<li><a href="https://vanhunteradams.com/FixedPoint/FixedPoint.html">Fixed point arithmetic</a></li>
+<li><a href="https://vanhunteradams.com/FFT/FFT.html">Fast Fourier Transforms</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Cricket/Synchronization.html">Synchronization of integrate-and-fire oscillators</a></li>
+<li><a href="https://vanhunteradams.com/Birds-serial/Birdsong_synthesis.html">Synthesizing birdsong</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Cricket/Cricket_synthesis.html">Synthesizing cricket chirps</a></li>
+<li><a href="https://vanhunteradams.com/PID/PID.html">PID control (phenomenological intro)</a></li>
+<li><a href="https://vanhunteradams.com/PID/PID_Analytical.html">PID control (analytical intro)</a></li>
+<li><a href="https://vanhunteradams.com/Estimation/Estimation.html">Particle filters, sigma-point filters, EKF's, UKF's, KF's</a></li>
+<li><a href="https://vanhunteradams.com/Estimation/Examples.html">Worked estimation examples</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Helicopter/MotorCircuit.html">Electrically isolating DC motors</a></li>
+</ul>
+<h4 id="Communication-protocols">Communication protocols<a class="anchor-link" href="#Communication-protocols">&#182;</a></h4><ul>
+<li><a href="https://vanhunteradams.com/Protocols/SPI/SPI.html">SPI communication</a></li>
+<li><a href="https://vanhunteradams.com/Protocols/I2C/I2C.html">I2C communication</a></li>
+<li><a href="https://vanhunteradams.com/Protocols/UART/UART.html">UART communication</a></li>
+</ul>
+<h4 id="Applications-and-projects">Applications and projects<a class="anchor-link" href="#Applications-and-projects">&#182;</a></h4><blockquote><p><strong>Hunter (RP2040)</strong></p>
+<ul>
+<li><a href="https://vanhunteradams.com/Pico/Steppers/Lorenz.html">Stepper motor driver for RP2040</a></li>
+<li><a href="https://vanhunteradams.com/Pico/VGA/VGA.html">VGA driver for RP2040 (+Mandelbrot, Barnsley, Game of Life)</a></li>
+<li><a href="https://vanhunteradams.com/Pico/VGA/FFT.html">Audio FFT to VGA on RP2040</a></li>
+<li><a href="https://vanhunteradams.com/Pico/VGA/Trackpad.html">Resistive touchscreen to VGA display</a></li>
+<li><a href="https://vanhunteradams.com/Pico/TimerIRQ/SPI_DDS.html">Direct Digital Synthesis (DDS) via timer interrupt</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Multi/MultiCore.html">Dual-core Direct Digital Synthesis (DDS) via timer interrupts</a></li>
+<li><a href="https://vanhunteradams.com/Pico/DAC/DMA_DAC.html">Simple DMA example</a></li>
+</ul>
+<p><strong>Bruce (RP2040)</strong></p>
+<ul>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_Lattice_Boltzmann/index_LB.html">Lattice-Boltzmann on RP2040</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/index_rp2040_Micropython.html">Micropython experimentation on RP2040</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_fixed_pt/index_fixed.html">Fixed point experimentation on RP2040</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_vga16_protothreads/index_vga_Protothreads.html">16-bit VGA color and Joystick on RP2040</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/index_rp2040_MBED.html">MBED for RP2040 (+steppers, NTSC video, DLA, FFT, Specra</a></li>
+</ul>
+<p><strong>Hunter (PIC32)</strong></p>
+<ul>
+<li><a href="https://vanhunteradams.com/Enigma/Enigma.html">Enigma machine emulated on PIC32</a></li>
+<li><a href="https://vanhunteradams.com/Spectrogram/Spectrogram.html">Realtime audio spectrogram</a></li>
+<li><a href="https://vanhunteradams.com/Birds-serial/Birdsong_keypad.html">Birdsong synthesizer</a></li>
+</ul>
+<p><strong>Bruce (PIC32)</strong></p>
+<ul>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/PIC32/index_DSP.html">Digital Signal Processing</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/PIC32/index_sound_synth.html">Sound synthesis</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/PIC32/index_neural_models.html">Neural modeling</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/PIC32/index_random.html">Random number generation</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/PIC32/index_pixel_strip.html">Pixel strip displays</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/PIC32/index_DMA_weird_machine.html">DMA weird machine</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/PIC32/index_NTSC_video.html">NTSC video generation</a></li>
+</ul>
+</blockquote>
+<h4 id="Raspberry-Pi-technical-documentation">Raspberry Pi technical documentation<a class="anchor-link" href="#Raspberry-Pi-technical-documentation">&#182;</a></h4><ul>
+<li><a href="https://datasheets.raspberrypi.com/pico/getting-started-with-pico.pdf">Getting started with Raspberry Pi Pico</a></li>
+<li><a href="https://datasheets.raspberrypi.com/rp2040/hardware-design-with-rp2040.pdf">Hardware design with RP2040</a></li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<hr>
+
 </div>
 </div>
 </div>
