--- a/index.html
+++ b/index.html
@@ -13077,7 +13077,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="ECE-4760,-Cornell-University">ECE 4760, Cornell University<a class="anchor-link" href="#ECE-4760,-Cornell-University">&#182;</a></h1><h3 id="Digital-Systems-Design-Using-Microcontrollers---V.-Hunter-Adams">Digital Systems Design Using Microcontrollers - <a href="https://vanhunteradams.com">V. Hunter Adams</a><a class="anchor-link" href="#Digital-Systems-Design-Using-Microcontrollers---V.-Hunter-Adams">&#182;</a></h3><p>Design of real-time digital systems using microprocessor-based embedded controllers. Students working in pairs design, debug, and construct several small systems that illustrate and employ the techniques of digital system design acquired in previous courses. The content focuses on laboratory work. The lectures are used primarily for the introduction of examples, description of specific modules to be designed, and instruction in the hardware and high-level design tools to be employed.</p>
+<h1 id="ECE-4760/5730,-Cornell-University">ECE 4760/5730, Cornell University<a class="anchor-link" href="#ECE-4760/5730,-Cornell-University">&#182;</a></h1><h3 id="Digital-Systems-Design-Using-Microcontrollers---V.-Hunter-Adams">Digital Systems Design Using Microcontrollers - <a href="https://vanhunteradams.com">V. Hunter Adams</a><a class="anchor-link" href="#Digital-Systems-Design-Using-Microcontrollers---V.-Hunter-Adams">&#182;</a></h3><p>Design of real-time digital systems using microprocessor-based embedded controllers. Students working in pairs design, debug, and construct several small systems that illustrate and employ the techniques of digital system design acquired in previous courses. The content focuses on laboratory work. The lectures are used primarily for the introduction of examples, description of specific modules to be designed, and instruction in the hardware and high-level design tools to be employed.</p>
 <p>The course is taught by <a href="https://www.engineering.cornell.edu/faculty-directory/hunter-adams">Hunter Adams</a>, who is a staff member in Electrical and Computer Engineering. The course is currently taught using the <a href="https://www.raspberrypi.com/products/rp2040/">RP2040 microcontroller</a> on the <a href="https://www.raspberrypi.com/products/raspberry-pi-pico/">Raspberry Pi Pico</a> development board.</p>
 <p>Please note that this is the <em>new</em> course webpage. If you are looking for the previous one, please click <a href="https://people.ece.cornell.edu/land/courses/ece4760/">here</a>.</p>
 
@@ -13140,8 +13140,8 @@ div#notebook {
 </ul>
 <p><strong>Lecture and lab schedule</strong></p>
 <ul>
-<li>Lectures: MWF</li>
-<li>Laboratory sections</li>
+<li>Lectures: MWF, 12:25-13:15, Hollister B14</li>
+<li>Laboratory sections: MWF, 13:30-16:30 ; W 19:30-22:30</li>
 </ul>
 <p><strong>Lecture recordings</strong></p>
 <ul>
