--- a/index.html
+++ b/index.html
@@ -13077,7 +13077,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="ECE-4760/5730,-Cornell-University">ECE 4760/5730, Cornell University<a class="anchor-link" href="#ECE-4760/5730,-Cornell-University">&#182;</a></h1><h3 id="Digital-Systems-Design-Using-Microcontrollers---V.-Hunter-Adams">Digital Systems Design Using Microcontrollers - <a href="https://vanhunteradams.com">V. Hunter Adams</a><a class="anchor-link" href="#Digital-Systems-Design-Using-Microcontrollers---V.-Hunter-Adams">&#182;</a></h3><p>Design of real-time digital systems using microprocessor-based embedded controllers. Students working in pairs design, debug, and construct several small systems that illustrate and employ the techniques of digital system design acquired in previous courses. The content focuses on laboratory work. The lectures are used primarily for the introduction of examples, description of specific modules to be designed, and instruction in the hardware and high-level design tools to be employed.</p>
+<h1 id="ECE-4760/5730,-Cornell-University">ECE 4760/5730, Cornell University<a class="anchor-link" href="#ECE-4760/5730,-Cornell-University">&#182;</a></h1><h3 id="Digital-Systems-Design-Using-Microcontrollers---V.-Hunter-Adams">Digital Systems Design Using Microcontrollers - <a href="https://vanhunteradams.com">V. Hunter Adams</a><a class="anchor-link" href="#Digital-Systems-Design-Using-Microcontrollers---V.-Hunter-Adams">&#182;</a></h3><p>Design of real-time digital systems using microprocessor-based embedded controllers. Students working in groups design, debug, and construct several small systems that illustrate and employ the techniques of digital system design acquired in previous courses. The content focuses on laboratory work. The lectures are used primarily for the introduction of examples, description of specific modules to be designed, and instruction in the hardware and high-level design tools to be employed.</p>
 <p>The course is taught by <a href="https://www.engineering.cornell.edu/faculty-directory/hunter-adams">Hunter Adams</a>, who is a staff member in Electrical and Computer Engineering. The course is currently taught using the <a href="https://www.raspberrypi.com/products/rp2040/">RP2040 microcontroller</a> on the <a href="https://www.raspberrypi.com/products/raspberry-pi-pico/">Raspberry Pi Pico</a> development board.</p>
 <p>Please note that this is the <em>new</em> course webpage. If you are looking for the previous one, please click <a href="https://people.ece.cornell.edu/land/courses/ece4760/">here</a>.</p>
 
@@ -13104,11 +13104,11 @@ div#notebook {
 <p><strong>Final project</strong></p>
 <ul>
 <li><a href="./Final_Project.html">Final project assignment</a></li>
-<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/">Final projects from previous semesters</a></li>
 </ul>
 <p><strong>Metainformation and due dates</strong></p>
 <ul>
 <li><strong>Schedule of due dates</strong></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/">Final projects from previous semesters</a></li>
 <li><strong>What makes a good laboratory exercise?</strong></li>
 </ul>
 
@@ -13156,6 +13156,10 @@ div#notebook {
 <ul>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/">Link here</a>: Contains information that you may find useful and interesting!</li>
 </ul>
+<p><strong>Canvas site</strong></p>
+<ul>
+<li>Link to be added: Will be used to turn in all assignments</li>
+</ul>
 
 </div>
 </div>
@@ -13183,6 +13187,7 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Pico/Setup/UsingPicoSDK.html">Using RP2040 C SDK (dissecting a simple example)</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_protothreads/index_Protothreads.html">Protothreads on RP2040 (from Bruce)</a></li>
 <li><strong>Building demo code in the computer lab</strong></li>
+<li><strong>Course bill of materials</strong></li>
 </ul>
 <h4 id="Algorithms-and-techniques">Algorithms and techniques<a class="anchor-link" href="#Algorithms-and-techniques">&#182;</a></h4><ul>
 <li><a href="https://vanhunteradams.com/DDS/DDS.html">Direct Digital Synthesis</a></li>
