--- a/index.html
+++ b/index.html
@@ -13095,15 +13095,12 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Assignments">Assignments<a class="anchor-link" href="#Assignments">&#182;</a></h2><p><strong>Lab exercises, homework, and reading</strong></p>
+<h2 id="Assignments">Assignments<a class="anchor-link" href="#Assignments">&#182;</a></h2><p><strong>Lab exercises, homework, reading, and final project</strong></p>
 <ul>
 <li><a href="https://vanhunteradams.com/Pico/Cricket/Crickets.html"><strong>Lab 1</strong>: Synthesizing and synchronizing snowy tree crickets</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Animal_Movement/Animal_Movement.html"><strong>Lab 2</strong>: Animating leadership and decision-making in animal groups on the move</a></li>
 <li><strong>Lab 3</strong>: PID control of an inverted pendulum with a reaction wheel</li>
-</ul>
-<p><strong>Final project</strong></p>
-<ul>
-<li><a href="./Final_Project.html">Final project assignment</a></li>
+<li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Final_Project.html"><strong>Final project</strong></a>: a 4-week, open-ended design project</li>
 </ul>
 <p><strong>Metainformation and due dates</strong></p>
 <ul>
@@ -13142,15 +13139,16 @@ div#notebook {
 <ul>
 <li>Lectures: MWF, 12:25-13:15, Hollister B14</li>
 <li>Laboratory sections: MWF, 13:30-16:30 ; W 19:30-22:30</li>
+<li>Office hours: You may come to any lab section and I'll be there. I'll also schedule some extras each week.</li>
 </ul>
 <p><strong>Lecture recordings</strong></p>
 <ul>
 <li><a href="https://www.youtube.com/playlist?list=PLDqMkB5cbBA6FEJuj94gl-9vw8xcHu9Gp">PIC32 lectures (2021/2022) - Hunter</a></li>
 <li><a href="https://www.youtube.com/playlist?list=PLKcjQ_UFkrd43P4lgzCot1hgiUu8onfaj">PIC32 lectures (2017) - Bruce</a></li>
 </ul>
-<p><strong>Course policy and grading</strong></p>
+<p><strong>Course policy, grading, and lab report expectations</strong></p>
 <ul>
-<li>Policy page: This is the <strong>implicit contract</strong> to which you are agreeing by taking this course. <em>Please read it.</em></li>
+<li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Policy.html">Policy page</a>: This is the <em>implicit contract</em> to which you are agreeing by taking this course. <em>Please read it.</em> </li>
 </ul>
 <p><strong>Previous course webpage (PIC32)</strong></p>
 <ul>
