what makes a good lab

--- a/index.html
+++ b/index.html
@@ -13107,7 +13107,7 @@ div#notebook {
 <ul>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Schedule.html">Schedule of due dates</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/">Final projects from previous semesters</a></li>
-<li><strong>What makes a good laboratory exercise?</strong></li>
+<li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Lab_Criteria.html">What makes a good laboratory exercise?</a></li>
 </ul>
 
 </div>
