--- a/index.html
+++ b/index.html
@@ -13257,6 +13257,29 @@ div#notebook {
 </div>
 </div>
 </div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Life-after-ECE-4760/5730">Life after ECE 4760/5730<a class="anchor-link" href="#Life-after-ECE-4760/5730">&#182;</a></h2><h4 id="Publish-your-project!">Publish your project!<a class="anchor-link" href="#Publish-your-project!">&#182;</a></h4><ul>
+<li><a href="https://vanhunteradams.com/4920/4920.html">ECE 4920</a>: In this technical writing seminar, we will turn your final report into a magazine article and submit it for publication.</li>
+<li><a href="https://vanhunteradams.com/4920/Published.html">Projects published last year</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/eceprojectsland/STUDENTPROJ/published.html">Projects published since 2002</a></li>
+</ul>
+<h4 id="Take-ECE-5760">Take ECE 5760<a class="anchor-link" href="#Take-ECE-5760">&#182;</a></h4><ul>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece5760/">Course webpage</a>: A similar course based on system-on-a-chip and FPGA design</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<hr>
+
+</div>
+</div>
+</div>
     </div>
   </div>
 </body>
