--- a/index.html
+++ b/index.html
@@ -13096,12 +13096,12 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Assignments">Assignments<a class="anchor-link" href="#Assignments">&#182;</a></h2><p><strong>Lab exercises, homework, reading, and final project</strong></p>
+<h2 id="Assignments">Assignments<a class="anchor-link" href="#Assignments">&#182;</a></h2><p><strong>Lab exercises, reading, and final project</strong></p>
 <ul>
 <li><a href="https://vanhunteradams.com/Pico/Cricket/Crickets.html"><strong>Lab 1</strong>: Synthesizing and synchronizing snowy tree crickets</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Animal_Movement/Animal_Movement.html"><strong>Lab 2</strong>: Animating leadership and decision-making in animal groups on the move</a></li>
-<li><strong>Lab 3</strong>: PID control of an inverted pendulum with a reaction wheel</li>
-<li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Final_Project.html"><strong>Final project</strong></a>: a 4-week, open-ended design project</li>
+<li><a href="https://vanhunteradams.com/Pico/ReactionWheel/ReactionWheel.html"><strong>Lab 3</strong>: PID control of an inverted pendulum with a reaction wheel</a></li>
+<li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Final_Project.html"><strong>Final project</strong>: a 4-week, open-ended design project</a></li>
 </ul>
 <p><strong>Metainformation and due dates</strong></p>
 <ul>
@@ -13144,8 +13144,8 @@ div#notebook {
 </ul>
 <p><strong>Lecture recordings</strong></p>
 <ul>
-<li><a href="https://www.youtube.com/playlist?list=PLDqMkB5cbBA6FEJuj94gl-9vw8xcHu9Gp">PIC32 lectures (2021/2022) - Hunter</a></li>
-<li><a href="https://www.youtube.com/playlist?list=PLKcjQ_UFkrd43P4lgzCot1hgiUu8onfaj">PIC32 lectures (2017) - Bruce</a></li>
+<li><strong>RP2040 lectures</strong>: These will begin on 8/22/2022</li>
+<li><a href="https://www.youtube.com/playlist?list=PLDqMkB5cbBA6FEJuj94gl-9vw8xcHu9Gp">PIC32 lectures (last year)</a>: A different microcontroller, but many similar concepts</li>
 </ul>
 <p><strong>Course policy, grading, and lab report expectations</strong></p>
 <ul>
@@ -13178,6 +13178,7 @@ div#notebook {
 <li><a href="https://github.com/vha3/Hunter-Adams-RP2040-Demos">Course demo code</a></li>
 <li><a href="https://datasheets.raspberrypi.com/rp2040/rp2040-datasheet.pdf">RP2040 datasheet</a></li>
 <li><a href="https://datasheets.raspberrypi.com/pico/raspberry-pi-pico-c-sdk.pdf">RP2040 C SDK Guide</a></li>
+<li><a href="https://datasheets.raspberrypi.com/pico/pico-datasheet.pdf">Pi Pico datasheet</a></li>
 </ul>
 <h4 id="Course-infrastructure">Course infrastructure<a class="anchor-link" href="#Course-infrastructure">&#182;</a></h4><ul>
 <li><a href="https://vanhunteradams.com/Pico/Setup/PicoSetup.html">Setting up C/C++ build environment for RP2040 on Windows</a></li>
@@ -13195,6 +13196,8 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Pico/Cricket/Synchronization.html">Synchronization of integrate-and-fire oscillators</a></li>
 <li><a href="https://vanhunteradams.com/Birds-serial/Birdsong_synthesis.html">Synthesizing birdsong</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Cricket/Cricket_synthesis.html">Synthesizing cricket chirps</a></li>
+<li><a href="https://vanhunteradams.com/Pico/ReactionWheel/Complementary_Filters.html">Complementary filters</a></li>
+<li><a href="https://vanhunteradams.com/Pico/ReactionWheel/Digital_Lowpass_Filters.html">Digital lowpass filters</a></li>
 <li><a href="https://vanhunteradams.com/PID/PID.html">PID control (phenomenological intro)</a></li>
 <li><a href="https://vanhunteradams.com/PID/PID_Analytical.html">PID control (analytical intro)</a></li>
 <li><a href="https://vanhunteradams.com/Estimation/Estimation.html">Particle filters, sigma-point filters, EKF's, UKF's, KF's</a></li>
