couple more links

--- a/index.html
+++ b/index.html
@@ -13202,6 +13202,8 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/PID/PID_Analytical.html">PID control (analytical intro)</a></li>
 <li><a href="https://vanhunteradams.com/Estimation/Estimation.html">Particle filters, sigma-point filters, EKF's, UKF's, KF's</a></li>
 <li><a href="https://vanhunteradams.com/Estimation/Examples.html">Worked estimation examples</a></li>
+<li><a href="https://vanhunteradams.com/Pico/ReactionWheel/Pendulum_construction.html">Mechanical construction of inverted pendulum</a></li>
+<li><a href="https://vanhunteradams.com/Pico/ReactionWheel/Tuning.html">Tuning reaction wheel PID</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Helicopter/MotorCircuit.html">Electrically isolating DC motors</a></li>
 </ul>
 <h4 id="Communication-protocols">Communication protocols<a class="anchor-link" href="#Communication-protocols">&#182;</a></h4><ul>
