--- a/index.html
+++ b/index.html
@@ -13129,17 +13129,20 @@ div#notebook {
 <li><strong>Instructor</strong>: Hunter Adams (<a href="https://www.engineering.cornell.edu/faculty-directory/hunter-adams">Cornell page</a>, <a href="https://vanhunteradams.com">personal website</a>)</li>
 <li>Retired instructor: Bruce Land (<a href="https://people.ece.cornell.edu/land/">website</a>)</li>
 <li>Teaching Assistants<blockquote><ul>
-<li>TBA</li>
-<li>TBA</li>
-<li>$\vdots$</li>
+<li>Stefen Pegels (sgp62)</li>
+<li>Aratrika Ghatak (ag988)</li>
+<li>Tyrone Whitmore-Wilson (jw234)</li>
+<li>Tyler Bisk (tjb274)</li>
+<li>Elias Hanna (eph48)</li>
+<li>Marek Chmielewski (mc2255)</li>
 </ul>
 </blockquote>
 </li>
 </ul>
 <p><strong>Lecture and lab schedule</strong></p>
 <ul>
-<li>Lectures: MWF, 12:25-13:15, Hollister B14</li>
-<li>Laboratory sections: MWF, 13:30-16:30 ; W 19:30-22:30</li>
+<li>Lectures (Hollister B14): MWF, 12:25-13:15</li>
+<li>Laboratory sections (Phillips 238): MWF, 13:30-16:30 ; W 19:30-22:30</li>
 <li>Office hours: You may come to any lab section and I'll be there. I'll also schedule some extras each week.</li>
 </ul>
 <p><strong>Lecture recordings</strong></p>
