--- a/index.html
+++ b/index.html
@@ -13096,15 +13096,13 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Assignments">Assignments<a class="anchor-link" href="#Assignments">&#182;</a></h2><p><strong>Lab exercises, reading, and final project</strong></p>
-<ul>
+<h2 id="Assignments">Assignments<a class="anchor-link" href="#Assignments">&#182;</a></h2><h4 id="Lab-exercises,-reading,-and-final-project">Lab exercises, reading, and final project<a class="anchor-link" href="#Lab-exercises,-reading,-and-final-project">&#182;</a></h4><ul>
 <li><a href="https://vanhunteradams.com/Pico/Cricket/Crickets.html"><strong>Lab 1</strong>: Synthesizing and synchronizing snowy tree crickets</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Animal_Movement/Animal_Movement.html"><strong>Lab 2</strong>: Animating leadership and decision-making in animal groups on the move</a></li>
 <li><a href="https://vanhunteradams.com/Pico/ReactionWheel/ReactionWheel.html"><strong>Lab 3</strong>: PID control of an inverted pendulum with a reaction wheel</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Final_Project.html"><strong>Final project</strong>: a 4-week, open-ended design project</a></li>
 </ul>
-<p><strong>Metainformation and due dates</strong></p>
-<ul>
+<h4 id="Metainformation-and-due-dates">Metainformation and due dates<a class="anchor-link" href="#Metainformation-and-due-dates">&#182;</a></h4><ul>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Schedule.html">Schedule of due dates</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/">Final projects from previous semesters</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Lab_Criteria.html">What makes a good laboratory exercise?</a></li>
