--- a/index.html
+++ b/index.html
@@ -13122,7 +13122,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Links-(our-&quot;textbook&quot;)">Links (our "textbook")<a class="anchor-link" href="#Links-(our-&quot;textbook&quot;)">&#182;</a></h2><h4 id="Daily-use-links">Daily-use links<a class="anchor-link" href="#Daily-use-links">&#182;</a></h4><ul>
+<h2 id="Links-(these-are-our-&quot;textbook&quot;)">Links (these are our "textbook")<a class="anchor-link" href="#Links-(these-are-our-&quot;textbook&quot;)">&#182;</a></h2><h4 id="Daily-use-links">Daily-use links<a class="anchor-link" href="#Daily-use-links">&#182;</a></h4><ul>
 <li><a href="https://github.com/vha3/Hunter-Adams-RP2040-Demos">Course demo code</a></li>
 <li><a href="https://datasheets.raspberrypi.com/rp2040/rp2040-datasheet.pdf">RP2040 datasheet</a></li>
 <li><a href="https://datasheets.raspberrypi.com/pico/raspberry-pi-pico-c-sdk.pdf">RP2040 C SDK Guide</a></li>
