--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <head><meta charset="utf-8" />
 
-<title>ECE 4760/5730</title>
+<title>index</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-
 
 
 
@@ -13081,7 +13080,7 @@ div#notebook {
 <h1 id="ECE-4760/5730,-Cornell-University">ECE 4760/5730, Cornell University<a class="anchor-link" href="#ECE-4760/5730,-Cornell-University">&#182;</a></h1><h3 id="Digital-Systems-Design-Using-Microcontrollers---V.-Hunter-Adams">Digital Systems Design Using Microcontrollers - <a href="https://vanhunteradams.com">V. Hunter Adams</a><a class="anchor-link" href="#Digital-Systems-Design-Using-Microcontrollers---V.-Hunter-Adams">&#182;</a></h3><p>Design of real-time digital systems using microprocessor-based embedded controllers. Students working in groups of 2-3 design, debug, and construct several systems that illustrate and employ the techniques of digital system design acquired in previous courses. The content focuses on laboratory work. The lectures are used primarily for the introduction of examples, description of specific modules to be designed, and instruction in the hardware and high-level design tools to be employed.</p>
 <p>This is a Cumulative Design Experience (CDE) course. As such, lab exercises in this course will draw upon and synthesize as much material from the undergraduate electrical and computer engineering curriculum as possible. Students will implement concepts from differential equations, physics, a variety of coding classes, digital signal processing, analog circuits, control theory, computer graphics, robotics/mechatronics, and more in <em>real, physical projects</em>.</p>
 <p>The course is taught by <a href="https://www.engineering.cornell.edu/faculty-directory/hunter-adams">Hunter Adams</a>, who is a staff member in Electrical and Computer Engineering. The course is currently taught using the <a href="https://www.raspberrypi.com/products/rp2040/">RP2040 microcontroller</a> on the <a href="https://www.raspberrypi.com/products/raspberry-pi-pico/">Raspberry Pi Pico</a> development board.</p>
-<p>Please note that this is the <em>new</em> course webpage. If you are looking for the previous one, please click <a href="https://people.ece.cornell.edu/land/courses/ece4760/">here</a>.</p>
+<p>Please note that this is the <em>new</em> course webpage. If you are looking for the previous one, click <a href="https://people.ece.cornell.edu/land/courses/ece4760/">here</a>.</p>
 
 </div>
 </div>
