--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta charset="utf-8" />
 
-<title>ECE 4760/5730</title>
+<title>index</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13081,6 +13081,14 @@ div#notebook {
 <p>This is a Cumulative Design Experience (CDE) course. As such, lab exercises in this course will draw upon and synthesize as much material from the undergraduate electrical and computer engineering curriculum as possible. Students will implement concepts from differential equations, physics, a variety of coding classes, digital signal processing, analog circuits, control theory, computer graphics, robotics/mechatronics, and more in <em>real, physical projects</em>.</p>
 <p>The course is taught by <a href="https://www.engineering.cornell.edu/faculty-directory/hunter-adams">Hunter Adams</a>, who is a staff member in Electrical and Computer Engineering. The course is currently taught using the <a href="https://www.raspberrypi.com/products/rp2040/">RP2040 microcontroller</a> on the <a href="https://www.raspberrypi.com/products/raspberry-pi-pico/">Raspberry Pi Pico</a> development board.</p>
 <p>Please note that this is the <em>new</em> course webpage. If you are looking for the previous one, click <a href="https://people.ece.cornell.edu/land/courses/ece4760/">here</a>.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<head><script async defer src="https://buttons.github.io/buttons.js"></script><script async defer src="https://apis.google.com/js/platform.js"></script></head><p><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script><a class="github-button" href="https://github.com/vha3/Hunter-Adams-RP2040-Demos" data-color-scheme="no-preference: light; light: light; dark: dark;" aria-label="Star vha3/Hunter-Adams-RP2040-Demos on GitHub">Code</a><div class="g-ytsubscribe" data-channelid="UClyv0ZpZTPKirBJEeM3zsHQ" data-layout="default" data-count="hidden"></div></p>
 
 </div>
 </div>
