fixed a ta netid

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta charset="utf-8" />
 
-<title>ECE 4760/5730</title>
+<title>index</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13220,7 +13220,7 @@ div#notebook {
 <li>Teaching Assistants<blockquote><ul>
 <li>Stefen Pegels (sgp62)</li>
 <li>Aratrika Ghatak (ag988)</li>
-<li>Tyrone Whitmore-Wilson (jw234)</li>
+<li>Tyrone Whitmore-Wilson (tjw234)</li>
 <li>Tyler Bisk (tjb274)</li>
 <li>Elias Hanna (eph48)</li>
 <li>Marek Chmielewski (mc2255)</li>
@@ -13309,6 +13309,19 @@ div#notebook {
 
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+    </div>
+</div>
+</div>
+
 </div>
     </div>
   </div>
