updated TA list

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta charset="utf-8" />
 
-<title>ECE 4760</title>
+<title>index</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13222,7 +13222,6 @@ div#notebook {
 <li>Aratrika Ghatak (ag988)</li>
 <li>Tyrone Whitmore-Wilson (tjw234)</li>
 <li>Tyler Bisk (tjb274)</li>
-<li>Elias Hanna (eph48)</li>
 <li>Marek Chmielewski (mc2255)</li>
 </ul>
 </blockquote>
