build tutorial link

--- a/index.html
+++ b/index.html
@@ -13134,7 +13134,7 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Pico/Setup/SDKArchitecture.html">Understanding RP2040 C SDK architecture</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Setup/UsingPicoSDK.html">Using RP2040 C SDK (dissecting a simple example)</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_protothreads/index_Protothreads.html">Protothreads on RP2040 (from Bruce)</a></li>
-<li><strong>Building demo code in the computer lab</strong></li>
+<li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Building_Demos.html">Building demo code in the computer lab</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/4760_BOM.pdf">Course bill of materials</a></li>
 </ul>
 <h4 id="Algorithms-and-techniques">Algorithms and techniques<a class="anchor-link" href="#Algorithms-and-techniques">&#182;</a></h4><ul>
