--- a/index.html
+++ b/index.html
@@ -13106,6 +13106,7 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Schedule.html">Schedule of due dates</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/">Final projects from previous semesters</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Lab_Criteria.html">What makes a good laboratory exercise?</a></li>
+<li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Group_Preferences.html">Lab partner preferences</a></li>
 </ul>
 
 </div>
