--- a/index.html
+++ b/index.html
@@ -13249,7 +13249,7 @@ div#notebook {
 </ul>
 <p><strong>Canvas site</strong></p>
 <ul>
-<li>Link to be added: Will be used to turn in all assignments</li>
+<li><a href="https://canvas.cornell.edu/courses/44987">Link here</a>: Will be used to turn in all assignments</li>
 </ul>
 
 </div>
