updated preferences link

--- a/index.html
+++ b/index.html
@@ -13106,7 +13106,7 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Schedule.html">Schedule of due dates</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/">Final projects from previous semesters</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Lab_Criteria.html">What makes a good laboratory exercise?</a></li>
-<li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Group_Preferences.html">Lab partner preferences</a></li>
+<li><a href="https://docs.google.com/forms/d/e/1FAIpQLScdAdhil_X6sVV3uJ8s3meFMmGkuM-7qw9kcS9XEIm-75tSaA/viewform?usp=sf_link">Lab partner preferences</a></li>
 </ul>
 
 </div>
