lecture playlist link

--- a/index.html
+++ b/index.html
@@ -13236,7 +13236,7 @@ div#notebook {
 </ul>
 <p><strong>Lecture recordings</strong></p>
 <ul>
-<li><strong>RP2040 lectures</strong>: These will begin on 8/22/2022</li>
+<li><a href="https://www.youtube.com/playlist?list=PLDqMkB5cbBA5oDg8VXM110GKc-CmvUqEZ">RP2040 lectures</a>: This playlist will be updated with each new lecture.</li>
 <li><a href="https://www.youtube.com/playlist?list=PLDqMkB5cbBA6FEJuj94gl-9vw8xcHu9Gp">PIC32 lectures (last year)</a>: A different microcontroller, but many similar concepts</li>
 </ul>
 <p><strong>Course policy, grading, and lab report expectations</strong></p>
