--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta charset="utf-8" />
 
-<title>ECE 4760</title>
+<title>index</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13107,6 +13107,7 @@ div#notebook {
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/">Final projects from previous semesters</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Lab_Criteria.html">What makes a good laboratory exercise?</a></li>
 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScdAdhil_X6sVV3uJ8s3meFMmGkuM-7qw9kcS9XEIm-75tSaA/viewform?usp=sf_link">Lab partner preferences</a></li>
+<li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Materials.html">Lecture slides</a></li>
 </ul>
 
 </div>
