--- a/index.html
+++ b/index.html
@@ -13096,7 +13096,10 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Lecture-recordings">Lecture recordings<a class="anchor-link" href="#Lecture-recordings">&#182;</a></h2><h4 id="Please-find-lecture-recordings-for-the-Fall,-2022-semester-here.">Please find lecture recordings for the Fall, 2022 semester <a href="https://www.youtube.com/playlist?list=PLDqMkB5cbBA5oDg8VXM110GKc-CmvUqEZ">here</a>.<a class="anchor-link" href="#Please-find-lecture-recordings-for-the-Fall,-2022-semester-here.">&#182;</a></h4>
+<h2 id="Lecture-recordings">Lecture recordings<a class="anchor-link" href="#Lecture-recordings">&#182;</a></h2><ul>
+<li>YouTube playlist <a href="https://www.youtube.com/playlist?list=PLDqMkB5cbBA5oDg8VXM110GKc-CmvUqEZ">here</a>.</li>
+</ul>
+
 </div>
 </div>
 </div>
