--- a/index.html
+++ b/index.html
@@ -13125,6 +13125,7 @@ div#notebook {
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/">Final projects from previous semesters</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Lab_Criteria.html">What makes a good laboratory exercise?</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Materials.html">Lecture slides</a></li>
+<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSexrqKZjTeqIg24EicYAqRoPZ12Q7x3XGb7fwA8rTuPw7qplw/viewform?usp=sf_link">Final project purchase requests</a></li>
 </ul>
 
 </div>
