random number gen

--- a/index.html
+++ b/index.html
@@ -13196,6 +13196,7 @@ div#notebook {
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_fixed_pt/index_fixed.html">Fixed point experimentation on RP2040</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_vga16_protothreads/index_vga_Protothreads.html">16-color VGA and Joystick on RP2040</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/index_rp2040_MBED.html">MBED for RP2040 (+steppers, NTSC video, DLA, FFT, Specra)</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_random/index_random.html">Random number generation</a></li>
 </ul>
 <p><strong>Hunter (PIC32)</strong></p>
 <ul>
