--- a/index.html
+++ b/index.html
@@ -13188,6 +13188,7 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Pico/TimerIRQ/SPI_DDS.html">Direct Digital Synthesis (DDS) via timer interrupt</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Multi/MultiCore.html">Dual-core Direct Digital Synthesis (DDS) via timer interrupts</a></li>
 <li><a href="https://vanhunteradams.com/Pico/DAC/DMA_DAC.html">Simple DMA example</a></li>
+<li><a href="https://vanhunteradams.com/Pico/AM_Radio/AM.html">PWM-based AM transmitter</a></li>
 </ul>
 <p><strong>Bruce (RP2040)</strong></p>
 <ul>
